fix overflow y

--- a/docs/css/api.css
+++ b/docs/css/api.css
@@ -222,7 +222,7 @@ body {
     padding: 0;
     overflow-y: auto;
     overflow-x: hidden;
-    height: 100%;
+    height: calc(100% - 50px);
 }
 
 .docs-nav-item.hidden {
